# pyfloe

./: 404.html  LICENSE  README.md  conftest.py  customers.csv  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
api/: index.html
api/expressions/: index.html
api/floe/: index.html
api/io/: index.html
api/plan/: index.html
api/schema/: index.html
api/streaming/: index.html
datetime/: index.html
docs/: api-reference.md  datetime.md  expressions.md  index.md  internals.md  io.md  operations.md  streaming.md  type-safety.md
docs/api/: expressions.md  floe.md  index.md  io.md  plan.md  schema.md  streaming.md
expressions/: index.html
internals/: index.html
io/: index.html
operations/: index.html
search/: search_index.json
src/pyfloe/: __init__.py  core.py  expr.py  io.py  plan.py  schema.py  stream.py
streaming/: index.html
stylesheets/: api.css
tests/: test_100k_integration.py  test_core.py  test_datetime.py  test_io.py  test_pivot_unpivot.py  test_streaming.py
type-safety/: index.html
