[project]
name = "lite-flow"
version = "0.1.0"
description = "Zero-dependency lazy dataframe. Lo-fi data processing for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Edward van Eechoud" }]
keywords = ["dataframe", "lazy", "streaming", "etl", "csv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/Edwardvaneechoud/lite-flow"
Documentation = "https://github.com/Edwardvaneechoud/lite-flow#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lite_flow"]

[tool.hatch.build.targets.sdist]
include = ["src/lite_flow", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"src/lite_flow/expr.py" = ["E402"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]