[project]
name = "pyfloe"
version = "0.1.2"
description = "Zero-dependency lazy dataframe. Lo-fi data processing for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Edward van Eechoud" }]
keywords = ["dataframe", "lazy", "streaming", "etl", "csv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/Edwardvaneechoud/pyfloe"
Documentation = "https://edwardvaneechoud.github.io/pyfloe/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfloe"]

[tool.hatch.build.targets.sdist]
include = ["src/pyfloe", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"src/pyfloe/expr.py" = ["E402"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mypy>=1.19.1",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true
